tests/ui/non_send_canceller.stderr
error: future cannot be sent between threads safely
  --> tests/ui/non_send_canceller.rs:21:13
   |
21 |             assert_send(&foo);
   |             ^^^^^^^^^^^^^^^^^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/ui/non_send_canceller.rs:9:14: 9:19}`, the trait `Send` is not implemented for `Rc<()>`
note: future is not `Send` as this value is used across an await
  --> tests/ui/non_send_canceller.rs:13:45
   |
12 |             let _x = std::rc::Rc::new(());
   |                 -- has type `Rc<()>` which is not `Send`
13 |             sleep(Duration::from_millis(1)).await;
   |                                             ^^^^^ await occurs here, with `_x` maybe used later
note: required by a bound in `assert_send`
  --> tests/ui/non_send_canceller.rs:4:19
   |
 4 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`
